<resources>
    <string name="app_name">QuizzyMe</string>
    <string name="quizzy_me">Quizzy Me</string>
    <string name="the_study_app_for_students">The Study App for Students!</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="highscore_0">Highscore: 0</string>
    <string name="score_0">Score: 0</string>
    <string name="question_1_5">Question: 1/5</string>
    <string name="disable_dark_mode">Disable Dark Mode</string>
    <string name="enable_dark_mode">Enable Dark Mode</string>
    <string name="subject">Subject:</string>
    <string name="question">Question</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="confirm">Confirm</string>
    <string name="share_your_score_to_twitter">Share your score to Twitter!</string>
    <string name="back_to_main_menu">Back to Main Menu</string>
    <string name="_00_20">00:20</string>
</resources>